--- a/angularViaCep/src/styles.scss
+++ b/angularViaCep/src/styles.scss
@@ -10,3 +10,6 @@ body {
 .v-middle {
   vertical-align: middle;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
