--- a/angularViaCep/src/app/top-bar/top-bar.component.html
+++ b/angularViaCep/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <button
+    mat-button
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with menu icon"
@@ -9,6 +10,7 @@
   <span>Angular features</span>
   <span class="example-spacer"></span>
   <button
+    mat-button
     mat-icon-button
     class="example-icon favorite-icon"
     aria-label="Example icon-button with heart icon"
@@ -16,6 +18,7 @@
     <mat-icon>favorite</mat-icon>
   </button>
   <button
+    mat-button
     mat-icon-button
     class="example-icon"
     aria-label="Example icon-button with share icon"
