--- a/angularViaCep/src/app/cep-details/cep-details.component.html
+++ b/angularViaCep/src/app/cep-details/cep-details.component.html
@@ -1,12 +1,15 @@
 <div class="details">
-  <h2>CEP</h2>
-
-  <div *ngIf="cep">
-    <p>{{ cep.cep }}</p>
-    <p>{{ cep.logradouro }}</p>
-    <p>{{ cep.complemento }}</p>
-    <p>{{ cep.bairro }}</p>
-    <p>{{ cep.localidade }}</p>
-    <p>{{ cep.uf }}</p>
-  </div>
+  <mat-card>
+    <mat-card-title>CEP</mat-card-title>
+    <mat-card-content>
+      <div *ngIf="cep">
+        <p>{{ cep.cep }}</p>
+        <p>{{ cep.logradouro }}</p>
+        <p>{{ cep.complemento }}</p>
+        <p>{{ cep.bairro }}</p>
+        <p>{{ cep.localidade }}</p>
+        <p>{{ cep.uf }}</p>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
