--- a/angularViaCep/src/app/cep-home/cep-home.component.html
+++ b/angularViaCep/src/app/cep-home/cep-home.component.html
@@ -1,12 +1,14 @@
 <div class="home">
-    <form [formGroup]="cepForm" (ngSubmit)="onSubmit()">
+  <mat-card>
+    <mat-card-title for="cep">CEP</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="cepForm" (ngSubmit)="onSubmit()">
         <div>
-            <label for="cep">
-              CEP:
-            </label>
-            <input id="cep" type="text" formControlName="cep" required>
-          </div>
+          <input matInput id="cep" type="text" formControlName="cep" required />
+        </div>
 
-        <button class="button" type="submit">Pesquisar</button>
-    </form>
+        <button mat-button class="button" type="submit">Pesquisar</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
 </div>
